# LLM-Middleware

./: .env.example  .gitignore  0.4.22  ARCHITECTURE_FLOW.md  ARCHITECTURE_GAP_ANALYSIS.md  BEFORE_AFTER_COMPARISON.md  BENCHMARK_RESULTS.md  CLEANUP_GUIDE.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_VALIDATION_GUIDE.md  DEBUG_EMPTY_RESPONSE.md  Dockerfile  Dockerfile.sentinel  FINAL_BENCHMARK_RESULTS.md  FINAL_FIX_SUMMARY.md  FINAL_SETUP_ROUTER_API.md  FINAL_STATUS.md  FINAL_WORKING_SETUP.md  FIX_NONETYPE_ERROR.md  FRONTEND_GUIDE.md  GAP_SUMMARY.txt  GIT_PUSH_GUIDE.md  GPT_OSS_120B_GUIDE.md  HOW_DATASETS_WERE_MADE.md  HOW_TO_RUN.md  IMPROVEMENTS_APPLIED.md  IMPROVEMENTS_SUMMARY.md  LICENSE  LLM_INTEGRATION_GUIDE.md  MODEL_SELECTION_GUIDE.md  POSTMAN_GUIDE.md  PROMPT_INJECTION_FIX.md  QUICK_IMPROVEMENT_SUMMARY.txt  QUICK_REFERENCE.md  QUICK_START.md  QUICK_VALIDATION.txt  README.md  README_FRONTEND.md  READY_TO_TEST.md  READY_TO_USE_GPT_OSS_120B.md  (+52 more)
.chromadb/: chroma.sqlite3
datasets/: command_injection.txt  prompt_injection.txt  safe_prompts.txt  sql_injection.txt  xss_payloads.txt
datasets_real/: jailbreak_prompts.txt
docs/: ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  README.md  owasp_agentic_mapping.md
docs/academy/: CURRICULUM.md  README.md  mkdocs.yml  requirements.txt
docs/academy/_templates/: lab-template.md  lesson-template.md
docs/academy/en/: index.md
docs/reference/: api.md  compliance.md  design-review.md  engines-en.md  engines.md  micro-swarm.md  requirements.md
docs/rnd/: 2026-01-28-full-research.md  2026-02-14-deep-research.md  2026-02-25-sentinel-lattice-announcements.md
docs/security/: LAKERA-GUARD-PENTEST-2026-02-07.md  OSINT-VARTA-PENTEST-2026-02-26.md  QWEN-2026-001-advisory.md  SENTINEL-PENTEST-2026-02-26.md
examples/: semantic_detection_demo.py
front/: QUICK_START.md  README.md  package-lock.json  vite.config.js
front/src/: App.css  App.jsx  index.css
learn/: 01_Project_Overview.md  02_Architecture_and_Pipeline.md  03_Threats_Mitigated.md  04_Technical_Deep_Dive.md  05_Edge_Cases_and_Failsafes.md  06_Examiner_QA.md  07_Risk_Score_Calculation.md  08_Advanced_Architecture_QA.md  08_Technical_QA_Deep_Dive.md  09_Live_Demo_Scenarios.md  10_Ideation_and_Roadmap.md
scripts/: clean_secrets.py  ec2-deploy.sh  fetch_signatures.py  fix_encoding.py  fix_encoding_deep.py  generate_defenses.py  split_jailbreaks.py  split_signatures.py  strike.sh  translate_signatures.py  update_manifest.py  validate_signatures.py
sentinel-core/: Cargo.toml  README.md  pyproject.toml  sentinel_core.pyi  test_detection.py
sentinel-core/benches/: engine_benchmark.rs
sentinel-core/examples/: debug_onnx_model.rs  test_onnx_embedding.rs
sentinel-core/scripts/: export_bge_m3.py  export_onnx_models.py  export_onnx_optimum.py
sentinel-core/src/: bindings.rs  error.rs  lib.rs  macros.rs  patterns.rs  signatures.rs  unicode_norm.rs
sentinel-core/src/engines/: agent_authority_bypass.rs  agentic.rs  anomaly.rs  argumentation_safety.rs  attack.rs  attention.rs  behavioral.rs  capability_flow.rs  capability_proxy.rs  category.rs  chaos.rs  code_security.rs  cognitive_guard.rs  compliance.rs  crescendo.rs  cross_agent_contagion.rs  cross_tool_guard.rs  disproportionate_response.rs  dormant_payload.rs  drift.rs  embedding.rs  evasion.rs  exfiltration.rs  false_completion.rs  formal.rs  goal_predictability.rs  hybrid.rs  hyperbolic.rs  info_geometry.rs  injection.rs  intent_revelation.rs  jailbreak.rs  knowledge.rs  lethal_trifecta.rs  memory_integrity.rs  meta_framing.rs  mod.rs  model_containment.rs  moderation.rs  multimodal.rs  (+26 more)
sentinel-core/tests/: golden_tests.rs  property_tests.proptest-regressions  property_tests.rs
sentinel-sdk/: README.md  pyproject.toml
sentinel-sdk/examples/: integrations.py
sentinel-sdk/sentinel_shield/: __init__.py  client.py  exceptions.py  models.py
sentinel-sdk/tests/: conftest.py  test_client.py  test_integration.py  test_models.py  test_security.py
src/brain/: README.md  __init__.py  analyzer.py  health_check.py  main.py  observability.py  rate_limiter.py
src/sentinel/: README.md  __init__.py
tests/: conftest.py  rlm_smoke_test.py  test_academy_content.py  test_benchmark.py  test_crypto_identity.py  test_detection_mcp_client.py  test_immunity_components.py  test_labs.py  test_lasso_patterns.py  test_marketplace_skill_validator.py  test_oci_benchmark.py  test_sandbox_monitor.py  test_sentinel_framework.py  test_sentinel_integration.py  test_trust_score.py
tests/academy/: lint_lessons.py  test_2026_gaps.py  test_bilingual.py  test_lesson_structure.py
tests/brain/: test_virtual_context.py
tests/engines/: test_a2a_security_detector.py  test_activation_steering.py  test_adversarial_prompt_detector.py  test_agent_memory_shield.py  test_agentic_ide_attack_detector.py  test_agentic_monitor.py  test_atomic_operation_enforcer.py  test_attack_synthesizer.py  test_behavioral_api_verifier.py  test_cache_isolation_guardian.py  test_cascading.py  test_causal_attack_model.py  test_causal_inference_detector.py  test_compliance_policy_engine.py  test_compute_guardian.py  test_context_window_guardian.py  test_contrastive_prompt_anomaly.py  test_conversation_state_validator.py  test_cot_guardian.py  test_cross_modal_security_analyzer.py  test_distilled_security_ensemble.py  test_dynamic_rate_limiter.py  test_emergent_security_mesh.py  test_endpoint_analyzer.py  test_evolutive_attack_detector.py  test_explainable_security_decisions.py  test_federated_threat_aggregator.py  test_flip_attack_detector.py  test_formal_safety_verifier.py  test_formal_verification.py  test_gan_adversarial_defense.py  test_hidden_state_forensics.py  test_hierarchical_defense_network.py  test_homomorphic_engine.py  test_human_agent_trust_detector.py  test_hyperbolic_geometry.py  test_image_stego_detector.py  test_information_geometry.py  test_injection.py  test_input_length_analyzer.py  (+44 more)
tests/fixtures/: oci_bypasses_wave1-3.json  oci_bypasses_wave4.json  oci_bypasses_wave5.json  oci_bypasses_wave6a.json  oci_bypasses_wave6b.json
(+254 files in other folders)
