[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sentinel-core"
version = "0.1.0"
description = "High-performance AI security detection engine (Rust)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "SENTINEL Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
]
keywords = ["ai", "security", "llm", "prompt-injection", "rust"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-benchmark>=4.0", "maturin>=1.4"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "sentinel_core"
